--- a/examples/semantic_density_demo.ipynb
+++ b/examples/semantic_density_demo.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "<div style=\"background-color: rgba(200, 200, 200, 0.1); padding: 20px; border-radius: 8px; margin-bottom: 20px; border: 1px solid rgba(127, 127, 127, 0.2); max-width: 97.5%; overflow-wrap: break-word;\">\n",
     "  <p style=\"font-size: 16px; line-height: 1.6\">\n",
-    "This demo illustrates a state-of-the-art uncertainty quantification (UQ) approach known as semantic entropy. The token-probability-based semantic entropy method combines elements of black-box UQ (which generates multiple responses from the same prompt) and white-box UQ (which uses token probabilities of those generated responses) to compute entropy values and associated confidence scores. The discrete semantic entropy method is similar but functions solely as a black-box UQ method, as it does not require token probabilities. Both methods were proposed by Farquhar et al. (2024) and are demonstrated in this notebook.\n",
+    "This demo illustrates a state-of-the-art uncertainty quantification (UQ) approach known as semantic density. The semantic density method combines elements of black-box UQ (which generates multiple responses from the same prompt) and white-box UQ (which uses token probabilities of those generated responses) to compute density values. Intuitively, semantic density combines both signals to estimate a probability distribution for scoring each response. This method was proposed by Qiu et al. (2024) and is demonstrated in this notebook.\n",
     "  </p>\n",
     "</div>\n",
     "      \n",
@@ -34,7 +34,7 @@
     "  <div style=\"background-color: #34a853; color: white; border-radius: 50%; width: 30px; height: 30px; display: flex; justify-content: center; align-items: center; margin-right: 15px; flex-shrink: 0\"><strong>3</strong></div>\n",
     "  <div>\n",
     "    <p style=\"margin: 0; font-weight: bold\"><a href=#section3>Evaluate Hallucination Detection Performance</a></p>\n",
-    "    <p style=\"margin: 0; color: rgba(95, 99, 104, 0.8)\">Visualize model accuracy at different thresholds of the semantic entropy-based confidence scores. Compute precision, recall, and F1-score of hallucination detection.</p>\n",
+    "    <p style=\"margin: 0; color: rgba(95, 99, 104, 0.8)\">Visualize model accuracy at different thresholds of the semantic density score. Compute precision, recall, and F1-score of hallucination detection.</p>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -46,7 +46,7 @@
     "    <ul style=\"margin-bottom: 0\">\n",
     "      <li><strong>Universal Compatibility:</strong> Works with any LLM</li>\n",
     "      <li><strong>Intuitive:</strong> Easy to understand and implement</li>\n",
-    "      <li><strong>No Internal Access Required:</strong> Doesn't need token probabilities or model internals</li>\n",
+    "      <li><strong>Response-wise:</strong> Evaluates the trustworthiness of each response separately</li>\n",
     "    </ul>\n",
     "  </div>\n",
     "  \n",
@@ -55,6 +55,7 @@
     "    <ul style=\"margin-bottom: 0\">\n",
     "      <li><strong>Higher Cost:</strong> Requires multiple generations per prompt</li>\n",
     "      <li><strong>Slower:</strong> Multiple generations and comparison calculations increase latency</li>\n",
+    "      <li><strong>Internal Access Required:</strong> Needs access to token probabilities\n",
     "    </ul>\n",
     "  </div>\n",
     "</div>"
@@ -198,7 +199,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this example, we use `AzureChatOpenAI` to instantiate our LLM, but any [LangChain Chat Model](https://js.langchain.com/docs/integrations/chat/) may be used. Be sure to **replace with your LLM of choice.**"
+    "In this example, we use `AzureChatOpenAI` to instantiate our LLM, but any [LangChain Chat Model](https://js.langchain.com/docs/integrations/chat/) **that returns token probabilities** may be used. Be sure to **replace with your LLM of choice.**\n",
+    "\n",
+    "<div style=\"background-color: rgba(200, 0, 0, 0.1); padding: 8px; border-radius: 3px; margin-top: 10px; border: 1px solid rgba(0, 200, 0, 0.2); margin-right: 5px; box-sizing: border-box; width: 100%;\">\n",
+    "        <strong>❗ Important:</strong> Semantic density cannot be computed unless the LLM you use returns token probabilities.\n",
+    "      </div>"
    ]
   },
   {
@@ -246,12 +251,7 @@
     "  <tr>\n",
     "    <td style=\"font-weight: bold; padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">device</td>\n",
     "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">str or torch.device<br><code>default=\"cpu\"</code></td>\n",
-    "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">Specifies the device that NLI model use for prediction. Only applies to 'semantic_negentropy', 'noncontradiction' scorers. Pass a torch.device to leverage GPU.</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td style=\"font-weight: bold; padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">use_best</td>\n",
-    "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">bool<br><code>default=True</code></td>\n",
-    "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">Specifies whether to swap the original response for the uncertainty-minimized response among all sampled responses based on semantic entropy clusters. Only used if `scorers` includes 'semantic_negentropy' or 'noncontradiction'.</td>\n",
+    "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">Specifies the device that NLI model use for prediction. Only applies to 'noncontradiction' scorer. Pass a torch.device to leverage GPU.</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td style=\"font-weight: bold; padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">system_prompt</td>\n",
@@ -332,13 +332,13 @@
     "\n",
     "```python\n",
     "# Basic usage with default parameters\n",
-    "se = SemanticDensity(llm=llm)\n",
+    "sd = SemanticDensity(llm=llm)\n",
     "\n",
     "# Using GPU acceleration, default scorers\n",
-    "se = SemanticDensity(llm=llm, device=torch.device(\"cuda\"))\n",
+    "sd = SemanticDensity(llm=llm, device=torch.device(\"cuda\"))\n",
     "\n",
     "# High-throughput configuration with rate limiting\n",
-    "se = SemanticDensity(llm=llm, max_calls_per_min=200, use_n_param=True) \n",
+    "sd = SemanticDensity(llm=llm, max_calls_per_min=200, use_n_param=True) \n",
     "```"
    ]
   },
@@ -378,7 +378,7 @@
    },
    "outputs": [],
    "source": [
-    "se = SemanticDensity(\n",
+    "sd = SemanticDensity(\n",
     "    llm=llm,\n",
     "    max_calls_per_min=1000,  # set value to avoid rate limit error\n",
     "    device=device,  # use if GPU available\n",
@@ -399,14 +399,14 @@
     "  <tr>\n",
     "    <td style=\"font-weight: bold; vertical-align: top; padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">SemanticDensity.generate_and_score</td>\n",
     "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">\n",
-    "      <p>Generate LLM responses, sampled LLM (candidate) responses, and compute confidence scores for the provided prompts.</p>\n",
+    "      <p>Generate LLM responses, sampled LLM (candidate) responses, and compute density score for the provided prompts.</p>\n",
     "      <p><strong>Parameters:</strong></p>\n",
     "      <ul>\n",
     "        <li><code>prompts</code> - (<strong>list of str</strong>) A list of input prompts for the model.</li>\n",
     "        <li><code>num_responses</code> - (<strong>int, default=5</strong>) The number of sampled responses used to compute consistency.</li>\n",
     "        <li><code>show_progress_bars</code> - (<strong>bool, default=True</strong>) If True, displays a progress bar while generating and scoring responses.</li>    \n",
     "      </ul>\n",
-    "      <p><strong>Returns:</strong> <code>UQResult</code> containing data (prompts, responses, sampled responses, and confidence scores) and metadata</p>\n",
+    "      <p><strong>Returns:</strong> <code>UQResult</code> containing data (prompts, responses, sampled responses, and density score) and metadata</p>\n",
     "      <div style=\"background-color: rgba(0, 200, 0, 0.1); padding: 8px; border-radius: 3px; margin-top: 10px; border: 1px solid rgba(0, 200, 0, 0.2); margin-right: 5px; box-sizing: border-box; width: 100%;\">\n",
     "        <strong>💡 Best For:</strong> Complete end-to-end uncertainty quantification when starting with prompts.\n",
     "      </div>\n",
@@ -415,14 +415,14 @@
     "  <tr>\n",
     "    <td style=\"font-weight: bold; vertical-align: top; padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">SemanticDensity.score</td>\n",
     "    <td style=\"padding: 8px; border: 1px solid rgba(127, 127, 127, 0.2);\">\n",
-    "      <p>Compute confidence scores on provided LLM responses. Should only be used if responses and sampled responses are already generated.</p>\n",
+    "      <p>Compute density score on provided LLM responses. Should only be used if responses and sampled responses are already generated.</p>\n",
     "      <p><strong>Parameters:</strong></p>\n",
     "      <ul>\n",
     "        <li><code>responses</code> - (<strong>list of str</strong>) A list of LLM responses for the prompts.</li>\n",
     "        <li><code>sampled_responses</code> - (<strong>list of list of str</strong>) A list of lists of sampled LLM responses for each prompt. These will be used to compute consistency scores by comparing to the corresponding response from <code>responses</code>.</li>\n",
     "        <li><code>show_progress_bars</code> - (<strong>bool, default=True</strong>) If True, displays a progress bar while scoring responses.</li>  \n",
     "      </ul>\n",
-    "      <p><strong>Returns:</strong> <code>UQResult</code> containing data (responses, sampled responses, and confidence scores) and metadata</p>\n",
+    "      <p><strong>Returns:</strong> <code>UQResult</code> containing data (responses, sampled responses, and density score) and metadata</p>\n",
     "      <div style=\"background-color: rgba(0, 200, 0, 0.1); padding: 8px; border-radius: 3px; margin-top: 10px; border: 1px solid rgba(0, 200, 0, 0.2); margin-right: 5px; box-sizing: border-box; width: 100%;\">\n",
     "        <strong>💡 Best For:</strong> Computing uncertainty scores when responses are already generated elsewhere.\n",
     "      </div>\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -464,17 +464,10 @@
     }
    ],
    "source": [
-    "results = await se.generate_and_score(prompts=prompts, num_responses=10)\n",
+    "results = await sd.generate_and_score(prompts=prompts, num_responses=10)\n",
     "\n",
     "# # alternative approach: directly score if responses already generated\n",
-    "# results = se.score(responses=responses, sampled_responses=sampled_responses)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The LLM instance used here returns token probabilities during the response generation. In such scenario, `SemanticEntropy` class computes response probabilty in two ways: 1) Discrete semantic entropy: Equal probability to each response cluster and 2) Token-probability-based semantic entropy: Uses token probability to compute probability of each response cluster."
+    "# results = sd.score(responses=responses, sampled_responses=sampled_responses)"
    ]
   },
   {
@@ -800,9 +793,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we explore ‘filtered accuracy’ as a metric for evaluating the performance of our confidence scores. Filtered accuracy measures the change in LLM performance when responses with confidence scores below a specified threshold are excluded. By adjusting the confidence score threshold, we can observe how the accuracy of the LLM improves as less certain responses are filtered out.\n",
+    "Here, we explore ‘filtered accuracy’ as a metric for evaluating the performance of our density scores. Filtered accuracy measures the change in LLM performance when responses with density scores below a specified threshold are excluded. By adjusting the density score threshold, we can observe how the accuracy of the LLM improves as less certain responses are filtered out.\n",
     "\n",
-    "We will plot the filtered accuracy across various confidence score thresholds to visualize the relationship between confidence and LLM accuracy. This analysis helps in understanding the trade-off between response coverage (measured by sample size below) and LLM accuracy, providing insights into the reliability of the LLM’s outputs. "
+    "We will plot the filtered accuracy across various density score thresholds to visualize the relationship between density and LLM accuracy. This analysis helps in understanding the trade-off between response coverage (measured by sample size below) and LLM accuracy, providing insights into the reliability of the LLM’s outputs. "
    ]
   },
   {
@@ -943,25 +936,27 @@
     "tags": []
    },
    "source": [
-    "## 4. Scorer Definitions\n",
-    "Below are the definitions of the two confidence scores used in this demo.\n",
-    "\n",
-    "### Normalized Semantic Negentropy (Discrete)\n",
-    "Normalized Semantic Negentropy (NSN) normalizes the standard computation of discrete semantic entropy to be increasing with higher confidence and have [0,1] support. In contrast to the EMR and NCP, semantic entropy does not distinguish between an original response and candidate responses. Instead, this approach computes a single metric value on a list of responses generated from the same prompt. Under this approach, responses are clustered using an NLI model based on mutual entailment. We consider the discrete version of SE, where the final set of clusters is defined  as follows:\n",
+    "## 4. Scorer Definition\n",
+    "### Semantic Density\n",
+    "Semantic Density (SD) approximates a probability density function (PDF) in semantic space for estimating response correctness. Given a prompt $x$ with candidate response $y_*$, the objective is to construct a PDF that assigns higher density to regions in the semantic space that correspond to correct responses. We begin by sampling $M$ unique reference responses $y_i$ (for $i = 1, 2, \\dots, M$) conditioned on $x$. For any pair of responses $y_i, y_j$ with corresponding embeddings $v_i, v_j$, the semantic distance is estimated as\n",
     "\n",
     "\\begin{equation}\n",
-    "    SE(y_i; \\tilde{\\mathbf{y}}_i) = - \\sum_{C \\in \\mathcal{C}} P(C|y_i, \\tilde{\\mathbf{y}}_i)\\log P(C|y_i, \\tilde{\\mathbf{y}}_i),\n",
+    "    \\mathbb{E}(\\Vert v_i,v_j \\Vert^2) = p_c(y_i, y_j | x) + \\dfrac{1}{2} \\cdot p_n(y_i, y_j | x)\n",
     "\\end{equation}\n",
-    "where $P(C|y_i, \\tilde{\\mathbf{y}}_i)$ denotes the probability a randomly selected response $y \\in \\{y_i\\} \\cup \\tilde{\\mathbf{y}}_i $ belongs to cluster $C$, and $\\mathcal{C}$ denotes the full set of clusters of $\\{y_i\\} \\cup \\tilde{\\mathbf{y}}_i$.\n",
     "\n",
-    "To ensure that we have a normalized confidence score with $[0,1]$ support and with higher values corresponding to higher confidence, we implement the following normalization to arrive at *ormalized Semantic Negentropy* (NSN):\n",
+    "where $p_c, p_n$ denote the contradiction and neutrality scores returned by a natural language inference (NLI) model, respectively. This estimated distance is incorporated in the kernel function $K$ to smooth out the reference responses into a continuous distribution. The kernel function value can be obtained as\n",
+    "\n",
     "\\begin{equation}\n",
-    "    NSN(y_i; \\tilde{\\mathbf{y}}_i) = 1 - \\frac{SE(y_i; \\tilde{\\mathbf{y}}_i)}{\\log m},\n",
+    "    K(v_*, v_i) = (1 - \\mathbb{E}(\\Vert v_* - v_i \\Vert^2))\\bf{1}_{\\mathbb{E}(\\Vert v_* - v_i \\Vert) \\leq 1}\n",
     "\\end{equation}\n",
-    "where $\\log m$ is included to normalize the support.\n",
     "\n",
-    "### Normalized Semantic Negentropy (Token-Probability-Based)\n",
-    "For this version, the formula is the same as above except $P(C|y_i, \\tilde{\\mathbf{y}}_i)$ is computed using joint token probability."
+    "where $\\bf{1}$ is the indicator function such that $\\bf{1}_{\\text{condition}} = 1$ when the condition holds and $0$ otherwise. The final semantic density score is computed as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    SD(y_* | x) = \\dfrac{1}{\\sum^M_{i=1}\\sqrt[L_i]{p(y_i|x)}}\\sum^M_{i=1}\\sqrt[L_i]{p(y_i|x)}K(v_* - v_i)\n",
+    "\\end{equation}\n",
+    "\n",
+    "where $L_i$ denotes the length of $y_i$."
    ]
   },
   {
